--- a/Modul 1/11. Navigasi, Task, Back Stack/MyDeepNavigation/app/src/main/res/values/strings.xml
+++ b/Modul 1/11. Navigasi, Task, Back Stack/MyDeepNavigation/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyDeepNavigation</string>
+    <string name="activity_home">Home</string>
+    <string name="activity_detail">Detail</string>
 </resources>
