modul 4: android notification

--- a/Modul 4/2. Android Notification/SimpleNotif/app/src/main/res/values/strings.xml
+++ b/Modul 4/2. Android Notification/SimpleNotif/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SimpleNotif</string>
+    <string name="content_title">Ini content title</string>
+    <string name="content_text">Ini content text</string>
+    <string name="subtext">Ini sub text</string>
+    <string name="send_notif">Send Notification</string>
 </resources>
