modul 4: final project semoga diterima

--- a/Modul 4/4. Final Project/MovieCatalogueV4/app/src/main/res/values-in/strings.xml
+++ b/Modul 4/4. Final Project/MovieCatalogueV4/app/src/main/res/values-in/strings.xml
@@ -24,6 +24,11 @@
     <string name="navigation_drawer_open">Buka navigation drawer</string>
     <string name="navigation_drawer_close">Tutup navigation drawer</string>
 
+    <!-- SETTINGS -->
+    <string name="language">Ubah Bahasa</string>
+    <string name="language_settings">Pengaturan Bahasa</string>
+    <string name="reminder_settings">Pengaturan Pengingat</string>
+
     <!-- SEARCH -->
     <string name="type_title">Cari film…</string>
     <string name="search">Cari</string>
